--- a/Palidromo.html
+++ b/Palidromo.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NotCode</title>
-        <link rel="stylesheet" href="Style.css">
-    </head>
-    <body>
-        
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Verificador de Palíndromos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/palidromo.css">
+</head>
+<body>
+    <div class="container mt-5">
+        <h1 class="mb-4">Verificador de Palíndromos</h1>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Ingrese una frase" id="inputFrase">
+            <button class="btn btn-primary" type="button" onclick="verificarPalindromo()">Verificar</button>
+        </div>
+        <div id="resultado"></div>
+    </div>
+    <script src="javascript/palindromo.js"></script>
+</body>
 </html>
