--- a/Palidromo.html
+++ b/Palidromo.html
@@ -8,14 +8,32 @@
     <link rel="stylesheet" href="style/palidromo.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a class="active" href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
+            </li>
+            <li>
+                <a href="analisis_edad.html"><i class="bi bi-calendar"></i> Edad </a>
+            </li>
+            <li>
+                <a href="Factorial.html"><i class="bi bi-calculator-fill"></i> Factorial </a>
+            </li>
+            <li>
+                <a href="Palidromo.html"><i class="bi bi-file-earmark-word"></i> Palindromo </a>
+            </li>
+        </ul>
+    </nav>
     <div class="container mt-5">
-        <h1 class="mb-4">Verificador de Palíndromos</h1>
+        <h1 style="text-align: center; color: rgb(20, 20, 20);"  class="mb-4">Verificador de Palíndromos</h1>
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Ingrese una frase" id="inputFrase">
             <button class="btn btn-primary" type="button" onclick="verificarPalindromo()">Verificar</button>
         </div>
         <div id="resultado"></div>
+        <center><button class="my-button" id="reset-btn">Reset</button></center>
     </div>
+    
     <script src="javascript/palindromo.js"></script>
 </body>
 </html>
