--- a/analisis_home.html
+++ b/analisis_home.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li>
-                <a class="active" href="#"><i class="bi bi-house"></i> Home </a>
+                <a class="active" href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
             </li>
             <li>
                 <a href="analisis_edad.html"><i class="bi bi-calendar"></i> Edad </a>
