--- a/Palidromo.html
+++ b/Palidromo.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li>
-                <a class="active" href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
+                <a  href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
             </li>
             <li>
                 <a href="analisis_edad.html"><i class="bi bi-calendar"></i> Edad </a>
@@ -20,12 +20,12 @@
                 <a href="Factorial.html"><i class="bi bi-calculator-fill"></i> Factorial </a>
             </li>
             <li>
-                <a href="Palidromo.html"><i class="bi bi-file-earmark-word"></i> Palindromo </a>
+                <a class="active" href="Palidromo.html"><i class="bi bi-file-earmark-word"></i> Palindromo </a>
             </li>
         </ul>
     </nav>
     <div class="container mt-5">
-        <h1 style="text-align: center; color: rgb(20, 20, 20);"  class="mb-4">Verificador de Palíndromos</h1>
+        <h1 style="text-align: center; color: rgb(20, 20, 20);"  class="title mb-4">Verificador de Palíndromos</h1>
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Ingrese una frase" id="inputFrase">
             <button class="btn btn-primary" type="button" onclick="verificarPalindromo()">Verificar</button>
