--- a/analisis_edad.html
+++ b/analisis_edad.html
@@ -10,10 +10,10 @@
     <nav>
         <ul>
             <li>
-                <a class="active" href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
+                <a  href="analisis_home.html"><i class="bi bi-house"></i> Home </a>
             </li>
             <li>
-                <a href="analisis_edad.html"><i class="bi bi-calendar"></i> Edad </a>
+                <a class="active" href="analisis_edad.html"><i class="bi bi-calendar"></i> Edad </a>
             </li>
             <li>
                 <a href="Factorial.html"><i class="bi bi-calculator-fill"></i> Factorial </a>
